<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/defaultimg"

    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_zipcode"
            android:id="@+id/edtT_zipcode"
            />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text=""
            android:background="#0000"
            android:drawableRight="@android:drawable/ic_menu_search"
            android:textSize="24sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_display"
                android:layout_marginLeft="15dp"
                android:id="@+id/labelwind"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="---"
                android:id="@+id/txt_windspeed"
                android:layout_toEndOf="@+id/labelwind"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Humidity_display"
                android:id="@+id/labelhumidity"
                android:layout_marginLeft="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="---"
                android:id="@+id/txt_humiditypercent"
                android:layout_toEndOf="@+id/labelhumidity"/>

        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="----"
            android:textSize="50sp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/txt_currenttemp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/location_name"
            android:id="@+id/txt_location"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/today_date"
            android:id="@+id/txt_date"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"/>

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"

            android:id="@+id/img_emojis"
            android:src="@drawable/emoji_winter"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/txt_description"
            android:textSize="20sp"
            android:text="@string/description"
            android:layout_gravity="center_horizontal"
            />



    </LinearLayout>




<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="125dp"
    android:layout_marginLeft="20dp">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:layout_marginLeft="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_min"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="---"
            android:textStyle="bold"
            android:id="@+id/txt_tempmin"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"/>



    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="160dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_max"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="---"
            android:textStyle="bold"
            android:id="@+id/txt_tempmax"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</LinearLayout>




</LinearLayout>